src/objects/ReAssigning_Related_Records__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Filter_Clause__c</fullName>
        <description>This clause will filter the records to be moved</description>
        <inlineHelpText>This clause will filter the records to be moved. Please use AND APIFIELDNAME = FIELDVALUE</inlineHelpText>
        <label>Filter Clause</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDuplicate_Copy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDuplicate Copy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDuplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDuplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsOutBusiness_Copy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsOutBusiness Copy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsOutBusiness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsOutBusiness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_API__c</fullName>
        <label>Parent API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_Field__c</fullName>
        <label>Require Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isClone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isClone</label>
        <type>Checkbox</type>
    </fields>
    <label>ReAssigning Related Records</label>
</CustomObject>